# Predic

./: .gitignore  .vscodeignore  CHANGELOG.md  INSTRUCTIONS.md  LICENSE.md  README.md  build.js  build.mjs  esbuild.config.js  esbuild.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  webpack.config.js
Datasets/Synthetic Dataset/: main.ipynb
Notebooks/MLPredic-4b/: FineTune_MLPredic.ipynb
Notebooks/SolvPredic-3b/: SolvPredic_Finetune.ipynb
ReaComplete/: 1.py  main.py  model.py  model1.py  ref.py  temp.py  train_and_test.ipynb
media/scripts/: chat.js
media/styles/: chat.css
src/: agent.ts  extension.ts  gemma.js  index.js  local_smollm_server.py  model.ts  predic.py  test.js  tokenizer.json
src/model/: config.json
src/providers/: chatViewProvider.ts  inlineCompletionProvider.ts  modelManagerProvider.ts
v2/: .gitignore
v2/backend/: pyproject.toml  requirements.txt  run.py
v2/backend/src/predic_backend/: config.py  logging_config.py  main.py
v2/backend/src/predic_backend/models/: inference.py  manager.py
v2/backend/src/predic_backend/routes/: chat.py  completion.py  models.py
v2/backend/v2/predic/src/api/: client.ts
v2/backend/v2/predic/src/providers/: modelProvider.ts
v2/predic/: CHANGELOG.md  package.json
v2/predic/media/: chat.css  chat.js  modelManager.css  modelManager.js
v2/predic/src/: extension.ts  serverManager.ts  types.ts
v2/predic/src/api/: client.ts
v2/predic/src/providers/: chatViewProvider.ts  inlineCompletionProvider.ts  modelManagerProvider.ts  modelProvider.ts
