[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "aiofiles>=24.1.0",
    "bitsandbytes>=0.48.1",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.35.3",
    "protobuf>=6.32.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.1",
]
